# UpstageHackathon2024

./: .gitignore  CODE_INSIGHT.md  README.md  analysis.ipynb  pyproject.toml  rxconfig.py
solar_report/: solar_report.py
solar_report/components/: card.py  navbar.py  notification.py  sidebar.py
solar_report/pages/: __init__.py  about.py  index.py  insight.py
solar_report/templates/: template.py
solar_report/views/: charts.py  data.py  geography_view.py  stats_cards.py
